Issue 43: Used SVG gradient to put a cool glow behind visited nodes, instead of outlining them blue.

--- a/website/index.css
+++ b/website/index.css
@@ -34,7 +34,8 @@ line.bold {
   stroke-opacity: 1;
 }
 
-line.hidden {
+.hidden {
+  opacity: 0;
   stroke-opacity: 0;
 }
 
@@ -184,8 +185,4 @@ div.settings-menu > ul > li:hover {
 
 html.deployment-production #deployment-info {
   display: none;
-}
-
-#domain-label.hidden {
-  opacity: 0;
 }
